--- a/meteorology/templates/meteorology/index.html
+++ b/meteorology/templates/meteorology/index.html
@@ -6,16 +6,17 @@
 {% block body %}
 
 <div class="row">
+	<div id="listStations" class="col-md-2">
+               	<div style="padding-bottom:10px;margin:44px 0 22px;border-bottom:1px solid #eee;">
+			 <h3>Estaciones Meteorologicas</h3>
+                </div>
+		<ul id="listEstaciones">
 
+                </ul>
+        </div>
 	<div class="col-md-10">
 		<div style="height:20px;width:100%;"></div>
 		<div id="map-canvas" style="min-height:600px;width:100%;height:100%"></div>		
-	</div>
-	<div id="listStations" class="col-md-2">
-		<h3>Estaciones Meteorologicas</h3>
-		<ul id="listEstaciones">
-			
-		</ul>
 	</div>
 
 </div>
